# pandas-to-excel-automation

./: .gitignore  load-exel.py  main.py  pyproject.toml  testin.ipynb
output/: 20260209_template.xlsx
pickles/: 03_MARZO_2025_v022_0_df.pkl
templates/: template.xlsx
